[package]
name = "crec"
version = "0.1.0"
authors = [ "Danilo Petkovic <petkovicdanilo97@gmail.com>" ]
description = "Container Registry Client - command line utility to communicate with OCI registries"
edition = "2018"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.4"
oci-registry = { git = "https://github.com/petkovicdanilo/oci-registry-rs", rev = "dd7d936" }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
